Hook system to make this manager the only priviledged system of equiping outfits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(headers
         include/cobb/strings.h
         include/cobb/utf8naturalsort.h
         include/cobb/utf8string.h
+        include/Hooking.h
         include/ArmorAddonOverrideService.h
         include/OutfitSystem.h
         include/Forms.h
