--- a/src/version.rc
+++ b/src/version.rc
@@ -2,8 +2,8 @@
 #include <winres.h>
 
 1 VERSIONINFO
- FILEVERSION SKYRIMOUTFITSYSTEMNG_VERSION_MAJOR, SKYRIMOUTFITSYSTEMNG_VERSION_MINOR, SKYRIMOUTFITSYSTEMNG_VERSION_PATCH, SKYRIMOUTFITSYSTEMNG_VERSION_BETA
- PRODUCTVERSION SKYRIMOUTFITSYSTEMNG_VERSION_MAJOR, SKYRIMOUTFITSYSTEMNG_VERSION_MINOR, SKYRIMOUTFITSYSTEMNG_VERSION_PATCH, SKYRIMOUTFITSYSTEMNG_VERSION_BETA
+ FILEVERSION SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_MAJOR, SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_MINOR, SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_PATCH, SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_BETA
+ PRODUCTVERSION SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_MAJOR, SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_MINOR, SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_PATCH, SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_BETA
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -18,12 +18,12 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "FileDescription", "SKYRIMOUTFITSYSTEMNG"
-			VALUE "FileVersion", SKYRIMOUTFITSYSTEMNG_VERSION_VERSTRING
-            VALUE "InternalName", "SKYRIMOUTFITSYSTEMNG"
+            VALUE "FileDescription", "SKYRIMOUTFITEQUIPMENTSYSTEMNG"
+			VALUE "FileVersion", SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_VERSTRING
+            VALUE "InternalName", "SKYRIMOUTFITEQUIPMENTSYSTEMNG"
             VALUE "LegalCopyright", "MIT License"
-            VALUE "ProductName", "SKYRIMOUTFITSYSTEMNG"
-			VALUE "ProductVersion", SKYRIMOUTFITSYSTEMNG_VERSION_VERSTRING
+            VALUE "ProductName", "SKYRIMOUTFITEQUIPMENTSYSTEMNG"
+			VALUE "ProductVersion", SKYRIMOUTFITEQUIPMENTSYSTEMNG_VERSION_VERSTRING
         END
     END
     BLOCK "VarFileInfo"
