fixes to outfit list, PC player removal and reset application on important situation (location change, menu closing)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ message("Using toolchain file ${CMAKE_TOOLCHAIN_FILE}.")
 project(
         SkyrimOutfitEquipmentSystemNG
         VERSION 1.0.0
-        DESCRIPTION "Skyrim Outfit System for all version (SE/AE/VR)."
+        DESCRIPTION "Skyrim Outfit Equipment System for all version (SE/AE/VR)."
         LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
