--- a/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
+++ b/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
@@ -1,2 +1,25 @@
 [Debug]
-ExtraLogging = off
+; Enable useful SKSE logging information
+; Logging = true
+Logging = true
+; Enable for extra logging within the game and SKSE plugin logs. Logging must be enabled. May come at a slight performance cost.
+; ExtraLogging = false
+ExtraLogging = false
+
+[Menu]
+
+; Total amount of outfits per page shown in the MCM outfits page. Cannot exceed 60 due to UI limitations.
+; OutfitPaginationCount = 20
+OutfitPaginationCount = 20
+
+; Total mount of menu items shown in MCM SOES-NG menus (selecting outfits, mods, NPCs, etc). After this number, pagination will kick in.
+; MenuPaginationCount = 1000
+MenuPaginationCount = 1000
+
+[Gameplay]
+; Whether to allow other systems and mods overwrite current equipment for tracked characters, i.e Skyrim engine, follower mods, follower scripts, etc. 
+; If set to false only Skyrim Outfit Equipment System can equip outfits (armor) pieces. 
+; Note however, any system is allowed to unequip items. Also note any system is allowed to equip back in the current oufit of 
+; Highly recommended to leave this at false so only SOES manages tracked NPC's outfits, otherwise your character may end up with inconsistent visuals.
+; AllowExternalEquipment = false
+AllowExternalEquipment = false
