--- a/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
+++ b/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
@@ -2,7 +2,7 @@
 ; Enable useful SKSE logging information
 ; Logging = true
 Logging = true
-; Enable for extra logging within the game and SKSE plugin logs. Logging must be enabled. May come at a slight performance cost.
+; Enable for extra logging within the game and SKSE plugin logs. Logging must be enabled. Comes at a slight performance cost, only ever use for debugging purposes.
 ; ExtraLogging = false
 ExtraLogging = false
 
