--- a/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
+++ b/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
@@ -4,7 +4,7 @@
 Logging = true
 ; Enable for extra logging within the game and SKSE plugin logs. Logging must be enabled. Comes at a slight performance cost, only ever use for debugging purposes.
 ; ExtraLogging = false
-ExtraLogging = false
+ExtraLogging = true
 
 [Menu]
 
