add PollingMS settings

--- a/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
+++ b/contrib/Distribution/Config/SkyrimOutfitEquipmentSystemNG.ini
@@ -17,6 +17,10 @@ OutfitPaginationCount = 20
 MenuPaginationCount = 1000
 
 [Gameplay]
+; How long in ms to detect changes for currently rendered tracked characters. Set this to a lower value if you want to have more instant feedback. Cannot be lower than 500ms (half a second).
+; PollingMS = 2000
+PollingMS = 2000
+
 ; Whether to allow other systems and mods overwrite current equipment for tracked characters, i.e Skyrim engine, follower mods, follower scripts, etc. 
 ; If set to false only Skyrim Outfit Equipment System can equip outfits (armor) pieces. 
 ; Note however, any system is allowed to unequip items. Also note any system is allowed to equip back in the current oufit of 
